# message-dispatch-kernel

./: CMakeLists.txt  ClientKernel.cpp  ClientKernel.h  README.md  kernel.sln  main.cpp
command/: ServiceCmdBlackGold.h  ServiceCmdGold.h  ServiceCommand.cpp  ServiceCommand.h
globe/: BaseT.h  ExceptionBase.cpp  ExceptionBase.h  GeneralMacro.h  Kernel.cpp  Kernel.h
kernel/: kernel.aps  kernel.vcxproj  kernel.vcxproj.filters  resource.h
service/: Service.cpp  Service.h  ServiceGold.cpp  ServiceGold.h
